tests/negative/ownership/string_move.tx
// Negative test: using class instance after moving via assignment
// Expected: E0103 Use of moved variable
// Note: strings and primitives are Copy types and won't trigger this.

class Engine {
    power: int32;
    constructor(p: int32) { this.power = p; }
}

function main() {
    let eng = new Engine(200);
    let eng2 = eng;        // eng moved via assignment
    print(eng.power);      // ERROR: eng already moved to eng2
}
